[package]
name = "gpx-seeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "3.1.9", features = ["derive"] }
geo = "0.20.0"
gpx = "0.8.5"
hhmmss = "0.1.0"
